--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9938,6 +9938,13 @@ input
   font-weight: 700 !important;
 }
 
+.icon {
+  width: 300px !important;
+  border-radius: 40px;
+  margin-top: 50px;
+  margin-left: 60px;
+}
+
 .p-accordion-header-text {
   padding: 12px !important;
   font-size: 13px;
